--- a/src/Components/Css styles/Header.css
+++ b/src/Components/Css styles/Header.css
@@ -51,6 +51,7 @@
   margin-top: 30px;
   font-weight: bold;
   transition: all 0.5s;
+  font-style: normal;
 }
 .usersHeader:hover {
   transform: scale(1.1);
