--- a/src/Components/Css styles/SingleArticle.css
+++ b/src/Components/Css styles/SingleArticle.css
@@ -20,6 +20,7 @@
 .article-header {
   border: 5px solid #249095;
   margin: 7px;
+  padding: 7px;
 }
 
 .post-commentWrapper {
